adding styles, markup for forms and grid and updating grunt tasks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -50,16 +50,32 @@
 
 
     <!-- Feature Detection -->
-    <!-- <script src="./_scripts/modernizr.js"></script>
-    <script src="./_scripts/modernizr.tests.js"></script> -->
+    <script src="./_scripts/modernizr.js"></script>
+    <!--<script src="./_scripts/modernizr.tests.js"></script>-->
 
 
     </head>
     <body class="body">
-        <h1>Test 1</h1>
+        <header>
+        </header>
 
-        <!-- Validation Scripts -->
-        <!-- <script src="./_scripts/validation.js"></script> -->
+        <div id="page" class="page">
+            <main id="main" class="main" role="main">
+                <div class="layout layout-a">
+	                <div class="region region-a">
+	                   <div class="region-inner">
+                           <div class="demo-links">
+                               <h1>Demo Pages</h1>
+
+                               <a href="/layout.html">Layout A</a>
+                               <a href="/styleguide.html">Styleguide</a>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+            </main>
+        </div>
+
         <!-- Combined Scripts -->
         <script src="./_scripts/scripts.js"></script>
     </body>
