adding in header and start of content. Also added px-to-rem and autoprefixer to grunt

--- a/src/html/_index.html
+++ b/src/html/_index.html
@@ -77,22 +77,12 @@
                 <div class="layout layout-a">
 	                <div class="region region-a">
 	                   <div class="region-inner">
-                           <section class="introduction">
-                               <header class="introduction-header">
-                                   <h2 class="h4 introduction-title">
-                                       Andy Blackledge
-                                   </h2>
-                                   <h2 class="h2 introduction-subtitle">
-                                       Front End Developer
-                                   </h2>
+                           <div class="demo-links">
+                               <h1>Demo Pages</h1>
 
-                                   <p class="h3 introduction-header-text">
-                                       I have seen the javascripts
-                                   </p>
-                               </header>
-                               <div class="introduction-body">
-                               </div>
-                           </section>
+                               <a href="/layout.html">Layout A</a>
+                               <a href="/styleguide.html">Styleguide</a>
+                           </div>
                        </div>
                    </div>
                </div>
