adding some more detail

--- a/src/html/andy-at-work.html
+++ b/src/html/andy-at-work.html
@@ -101,10 +101,10 @@
                                           My role is as a front end developer and has been for the past 2 and a half years (as of April 2016), at this point in my career with Building Blocks I lead the front end on the projects I work on, responsible for any and all front end decisions on my projects.
                                       </p>
                                       <p>
-                                          I am a mentor to our only junior FE dev and often help out the other FE devs on the team. We have a team of 5 including myself but no real heirarchy in the team (no senior or head titles) so make decisions on what direction to take our FE template (now a pvt repo but the older/out of date public repo is here - <a href="https://github.com/buildingblocks/bb-prototype-website">https://github.com/buildingblocks/bb-prototype-website</a>) as a team with myself and another more senior member of the team making sure we still build in a 'Building Blocks way'. I also facilitate monthly FE team meetings so that we can all catchup on how our work is going, deal with any issues that there may be and so that we can share potential improvements to the way we work.
+                                          I am a mentor to our only junior FE dev and often help out the other FE devs on the team. We have a team of 5 including myself but no real hierarchy in the team (no senior or head titles) so make decisions on what direction to take our FE template (now a pvt repo but the older/out of date public repo is here - <a href="https://github.com/buildingblocks/bb-prototype-website">https://github.com/buildingblocks/bb-prototype-website</a>) as a team with myself and another more senior member of the team making sure we still build in a 'Building Blocks way'. I also facilitate monthly FE team meetings so that we can all catchup on how our work is going, deal with any issues that there may be and so that we can share potential improvements to the way we work.
                                       </p>
                                       <p>
-                                          As a more senior member of the FE team I will often be approached to estimate projects, offer advice on client requests, take part in workshops with the clients, take part in meetings around the company culture, general project direction, etc. I've also had the good fortune to take part in meetings with clients and design agencies in London, Orlando and Amsterdam on a couple of occassions and have just helped in the transition of our code base (due to project completion) over to the client and to help the backend team at IBM with the integration of our code.
+                                          As a more senior member of the FE team I will often be approached to estimate projects, offer advice on client requests, take part in workshops with the clients, take part in meetings around the company culture, general project direction, etc. I've also had the good fortune to take part in meetings with clients and design agencies in London, Orlando and Amsterdam on a couple of occasions and have just helped in the transition of our code base (due to project completion) over to the client and to help the backend team at IBM with the integration of our code.
                                       </p>
                                       <p>
                                           So although my day to day job is FE dev I do have a wider role within the company which has allowed me to develop my career and certainly keeps me more than a little bit busy.
@@ -148,7 +148,7 @@
                                   </header>
                                   <div class="article-body">
                                       <p>
-                                          Anyone who has any involement in front end will know there's a new framework or build tool coming out every week and there's always someone writing a blog post or doing a talk about it the week after it's out. I haven't mentioned any of them in my previous section, why not???
+                                          Anyone who has any involvement in front end will know there's a new framework or build tool coming out every week and there's always someone writing a blog post or doing a talk about it the week after it's out. I haven't mentioned any of them in my previous section, why not???
                                       </p>
                                       <p>
                                           I don't like to jump on the latest thing and start using it without reason to, I don't have enough time to play around with everything that comes out and when I do play with something it's in little bits a pieces over a couple weeks, such is life.
@@ -185,6 +185,98 @@
                                       <p>
                                           To stay up to date I follow a lot of FE related people on Twitter which I find to be a great resource for interesting blog posts and talks. I also subscribe to a couple of FE newsletters which tend to be very useful and of course I've got my own little community of developers, people I've worked with past and present and by staying in touch with freelancers that I've worked with at BB. I'm in a couple of slack channels with these guys which mean we can all help each other out, learn from each other and share articles and videos of talks. Might not sound like much but it's very useful to me.
                                       </p>
+                                  </div>
+                              </article>
+
+                              <article>
+                                  <header>
+                                      <h4 class="h4">My History</h4>
+                                  </header>
+                                  <div class="article-body">
+                                      <p>
+                                          I'm not going to discuss everything in detail because the majority of my work history is going to be irrelevant to this industry as you'll soon find out and as I'm currently 32 (4th July 1983) there's plenty of jobs in my past!
+                                      </p>
+
+                                      <div class="history-item">
+                                          <h5>Building Blocks</h5>
+                                          <p>
+                                              <strong>
+                                              Started:
+                                              </strong>
+                                              April 2012
+                                          </p>
+                                          <p>
+                                              Started as a junior developer on the service desk, here I spent my time working through support tickets from our clients, mainly on a couple of clients that I was assigned to. These tickets were usually small bugs or improvements that required working with a CMS called Tridion and working in a .net c# environment.
+                                          </p>
+                                          <p>
+                                              At this time I didn't really know much .net (and still don't) so I had to learn as I went. There wasn't a whole lot of front end work but as I progressed I had more of the front end tasks assigned to me as that became my strongest area and something I enjoyed more.
+                                          </p>
+                                          <p>
+                                              Working on the service desk is pretty challenging and helped me develop my debugging skills greatly. I made it clear that I wanted to join the front end team after a while here and I was eventually (after 18months) moved off service desk and moved into the front end team
+                                          </p>
+                                          <p>
+                                              I've now been on the front end team since September 2013 and over this time have become more and more central to that team and have been the lead front end dev on projects for a while now.
+                                          </p>
+                                      </div>
+
+                                      <div class="history-item">
+                                          <h5>Gold Search Media</h5>
+                                          <p>
+                                              <strong>
+                                              Started:
+                                              </strong>
+                                              June 2011
+                                          </p>
+                                          <p>
+                                              This was my first job in the industry straight off the back of my HND in web development. It was a small agency in Manchester working with small to medium businesses around the country, building sites for driving instructors up to companies working in the solar panel and construction industry which were obviously turning over a lot more money.
+                                          </p>
+                                          <p>
+                                              The sites we built were just small static sites, occasionally we'd have to build something in wordpress but mostly just html pages with no back end at all.
+                                          </p>
+                                          <p>
+                                              At this time I was just writing html, css and using javascript plugins, at this point I didn't really know any JS at all and this was just prior to responsive sites becoming the norm and before less and sass had become widely used. So very basic but a good start in the industry, a world away from what I do now.
+                                          </p>
+                                          <p>
+                                              Unfortunately this company ran into financial difficulties and I was made redundant, they no longer exist as a business I'm sad to say. Luckily for me I secured a position at Building Blocks and it's been the making of my career to this point, so ultimately it worked out well for me.
+                                          </p>
+                                      </div>
+
+                                      <div class="history-item">
+                                          <h5>Prior to working in web</h5>
+                                          <p>
+                                              Before I got into the industry I'd had a number of jobs in customer service and sales and completed two courses at university, I really didn't know what I was doing and what direction to go in.
+                                          </p>
+                                          <p>
+                                              Out of college (2001) I worked in a call centre for the mobile network O2, I wouldn't recommend call centre work, destroys the soul.
+                                          </p>
+                                          <p>
+                                              In my desperate attempt to find a career I almost joined the Army! I went through the whole selection process and was offered a position in the Royal Signals, after much deliberation I decided this wouldn't be the best route for me after all (thank god! Don't think I would've thrived in this environment).
+                                          </p>
+                                          <p>
+                                              So onto another job, DRL, another call centre, again, not for me, didn't enjoy the work, the company itself was fine but this type of work just wasn't right for me.
+                                          </p>
+                                          <p>
+                                              Time for another job! This time as a sales person at an appliance store called Miller Brothers, a bit like Comet or Currys. This was up and down for me but ultimately I'm not a sales person, it's just not in me and I don't think I have the personality type for this profession.
+                                          </p>
+                                          <p>
+                                              I know! I'll go to uni! So off to the University of Bolton (<a href="http://www.bolton.ac.uk/Home.aspx">yes it's a real place</a>) where I studied and acquired a degree in Psychology. Great subject, very interesting, I recommend it as a subject to learn but probably not the best in terms of job prospects...
+                                          </p>
+                                          <p>
+                                              Well I have a degree now, have to leave uni, guess I'll find a full time job again, off to Alliance and Leicester (now Santander). Here I worked behind the cash desk and then moved on to become a 'personal advisor' helping people by setting up bank accounts, applying for loans and credit cards for people and setting up and recommending savings accounts.
+                                          </p>
+                                          <p>
+                                              The bank was ok but I joined in 2008, just as the 'credit crunch' (aka the huge recession) kicked in, not really a good time to work in a bank. I also didn't find the work particularly fulfilling, it also involved sales which I didn't know when I joined, so again not a good role for me.
+                                          </p>
+                                          <p>
+                                              So fast forward a year, working in a bank in a job I don't enjoy and as such I don't have much in the way of career options. There had to be more to life!
+                                          </p>
+                                          <p>
+                                              I started to really think about what I enjoyed and what I could potentially do for work in the areas I enjoy. I liked computers, maybe I could do something in IT? I again turned to the University of Bolton to see what courses I could do, web development seemed like the most interesting so I'd signed up for a HND in 'multimedia and web development'.
+                                          </p>
+                                          <p>
+                                              I started my HND in September 2009 and went part time at the bank, I finished my course in June 2011 and found a job the same week that I took my last exam and now all these years later I'm a .com millionaire, well, not quite but at least I finally do something I enjoy and that I'm good at. Happy days!
+                                          </p>
+                                      </div>
                                   </div>
                               </article>
                            </section>
