--- a/src/html/portfolio.html
+++ b/src/html/portfolio.html
@@ -176,6 +176,21 @@
                                   </p>
                                 </div>
                             </article>
+                            <article>
+                                <header>
+                                    <h4>Tabs Functionality</h4>
+                                    <h5>An example of accessable tabs</h5>
+                                    <a href="http://andyblackledge.co.uk/tabs/">andyblackledge.co.uk/tabs/</a>
+                                </header>
+                                <div class="article-body">
+                                    <p>
+                                        This was a piece of functionality I made to demonstrate tab functionality in an accessable fashion and made in my favourite way of approaching work which is to seperate the functionality from the styling.
+                                    </p>
+                                    <p>
+                                        I've included this in my portfolio mainly to show how I like to work, my preference is always to create functionality as stand alone, so that it could be used anywhere without you having to then try and fight against existing styling that might be attached to a component (as I've seen done some many times and I personally hate). So with these tabs someone could re-use this elsewhere on a site and then just style as required. This is also reflected in my class naming, I like to keep it very generic, so 'tab-style-a' instead of 'tab-red' so we can change style-a to be anything in the future, whereas if tab-red was changed an was no longer red the naming would just be confusing and pointless.
+                                    </p>
+                                </div>
+                            </article>
                           </section>
                        </div>
                    </div>
