--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
     <head>
-        <base href="/">
-        <title>Angular 2 Template</title>
+        <title>andyblackledge</title>
         <meta charset="UTF-8">
         <meta http-equiv="cleartype" content="on">
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+        <base href="/">
+        
         <meta name="description" content="">
         <meta name="apple-mobile-web-app-title" content="Angular 2 Template">
         <meta name="apple-mobile-web-app-capable" content="yes">
