--- a/html/blog-form.html
+++ b/html/blog-form.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="./assets/favicon.ico">
+    <!--<link rel="shortcut icon" href="./assets/favicon.ico">
     <link rel="apple-touch-icon" href="./assets/images/apple-touch-icon-precomposed.png">
     <link rel="apple-touch-icon" href="./assets/images/apple-touch-icon-57x57-precomposed.png" sizes="57x57">
     <link rel="apple-touch-icon" href="./assets/images/apple-touch-icon-72x72-precomposed.png" sizes="72x72">
@@ -25,7 +25,36 @@
     <meta name="msapplication-TileImage" content="./assets/images/apple-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#FFFFFF">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">-->
+
+    <style>
+        .form-group,
+        .form-submit,
+        .form-response {
+            float: left;
+            width: 80%;
+            margin: 10px;
+        }
+
+        .form-response {
+            font-size: 32px;
+            line-height: 36px;
+            color: #cc0000;
+        }
+
+        textarea,
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 20px;
+            line-height: 24px;
+        }
+
+        button {
+            padding: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -38,7 +67,8 @@
           event.preventDefault();
           title = $(".form-title").val();
           body = $(".form-body").val();
-          $.post("http://localhost:4000/saveData",{title: title,body: body})
+          pass = $(".form-pass").val();
+          $.post("http://localhost:4000/saveData",{title: title,body: body, pass: pass})
             .done(function() {
                 $('.blog-post-form').trigger('reset');
                 $('.form-response').html('form submitted');
@@ -66,6 +96,10 @@
                             <div class="form-group">
                                 <label for="form_body">Body</label>
                                 <textarea rows="3" cols="10" placeholder="blog post body copy" id="form_body" class="form-body" name="form_body"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="form_password">Password</label>
+                                <input type="password" id="form_password" class="form-pass" name="form_password" />
                             </div>
 
                             <div class="form-submit">
