--- a/about.html
+++ b/about.html
@@ -67,9 +67,9 @@
                     </a>
                   </li>
                   <li>
-                    <a href="mailto:blackledge22@gmail.com" rel="external">
+                    <a href="mailto:me@andyblackledge.co.uk" rel="external">
                       <i class="icon icon--email">
-                        <span class="visually-hidden">email link for blackledge22@gmail.com</span>
+                        <span class="visually-hidden">email link for me@andyblackledge.co.uk</span>
                       </i>
                     </a>
                   </li>
